<resources>
    <string name="app_name">Mi Bodega</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_close">Cerrar Sesión</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_cli_perfil">Perfil (CLIENTE)</string>
    <string name="menu_cli_producto">Producto (CLIENTE)</string>
    <string name="menu_cli_historial">Historial de Pedidos (CLIENTE)</string>
    <string name="menu_rep_perfil">Perfil (REPARTIDOR)</string>
    <string name="menu_rep_pedidos">Pedidos por Entregar (REPARTIDOR)</string>
    <string name="menu_rep_historial">Historial de Entregados (REPARTIDOR)</string>
    <string name="menu_bod_perfil">Perfil (BODEGA)</string>
    <string name="menu_bod_producto">Producto (BODEGA) </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="olvido_sec">Se olvidó contraseña</string>
    <string name="registrate_sec">Registrate</string>

    <string name="ingresar_btn">INGRESAR</string>
    <string name="ver_btn">VER</string>

    <string name="clave_txt">Clave</string>
    <string name="usuario_txt">Usuario</string>

    <string name="bodega_per_lbl">BODEGA</string>
    <string name="cliente_per_lbl">CLIENTE</string>
    <string name="repartidor_per_lbl">DELIVERY</string>

    <!-- Bodega -->
    <string name="bob_txt_ruc">RUC</string>
    <string name="bob_txt_nombre">Nombre Tienda</string>
    <string name="bob_txt_contacto">Contacto</string>
    <string name="bob_txt_telefono">Telefono</string>
    <string name="bob_txt_direccion">Dirección</string>
    <string name="bob_txt_usuario">Usuario</string>
    <string name="bob_txt_clave">Clave</string>
    <string name="bob_txt_reclave">Repetir Clave</string>

    <string name="bod_btn_registra">Crear Cuenta</string>
    <!-- Cliente -->
    <string name="cli_txt_nombre">Nombre</string>
    <string name="cli_txt_telefono">Telefono</string>
    <string name="cli_txt_direccion">Dirección</string>
    <string name="cli_txt_usuario">Usuario</string>
    <string name="cli_txt_clave">Clave</string>
    <string name="cli_txt_reclave">Repetir Clave</string>

    <string name="cli_btn_registra">Crear Cuenta</string>

    <!-- Repartidor -->
    <string name="rep_txt_nombre">Nombre</string>
    <string name="rep_txt_telefono">Telefono</string>
    <string name="rep_txt_tipovehiculo">Tipo de Vehiculo</string>
    <string name="rep_txt_usuario">Usuario</string>
    <string name="rep_txt_clave">Clave</string>
    <string name="rep_txt_reclave">Confirmación de Clave</string>

    <string name="rep_btn_registra">Crear Cuenta</string>
    <string name="cli_txt_busqueda">Busqueda....</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Mensajes -->
    <string name="lista_vacia">No hay resultados de busqueda</string>
    <string name="loading">Cargando...</string>
    <string name="msg_exito">Registro exitoso...</string>
    <string name="msg_error">UPS!!!. Algo salió mal</string>
    <string name="msg_error_servidor">UPS!!!. Ocurrió un error</string>
    <string name="msg_error_internet">No hay conección a internet</string>
</resources>