<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.bodega.PerfilBodFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle"
            android:layout_margin="@dimen/separador_margin"
            android:divider="@drawable/empty_tall_divider"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_bodega"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <EditText
                    android:id="@+id/et_bob_ruc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bob_txt_ruc"
                    android:maxLength="11"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <EditText
                    android:id="@+id/et_bob_nomTienda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bob_txt_nombre"
                    android:maxLength="20"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <EditText
                    android:id="@+id/et_bob_contacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bob_txt_contacto"
                    android:maxLength="20"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <EditText
                    android:id="@+id/et_bob_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bob_txt_telefono"
                    android:maxLength="9"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <EditText
                    android:id="@+id/et_bob_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bob_txt_direccion"
                    android:maxLength="150"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <EditText
                    android:id="@+id/et_bob_nomUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bob_txt_usuario"
                    android:maxLength="8"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <EditText
                    android:id="@+id/et_bob_clave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bob_txt_clave"
                    android:maxLength="8"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <EditText
                    android:id="@+id/et_bob_reClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bob_txt_reclave"
                    android:maxLength="8"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_bod_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/bod_btn_registra"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:layout_marginBottom="50dp"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>