<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/separador_margin"
            android:showDividers="middle"
            android:divider="@drawable/empty_tall_divider"
            android:orientation="vertical" >
<!--
            <com.airbnb.lottie.LottieAnimationView
                android:layout_gravity="center"
                android:layout_width="250dp"
                android:layout_marginTop="90dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                app:lottie_autoPlay="true"
                android:id="@+id/lottie_login"
                app:lottie_rawRes="@raw/food_entrega"
                />-->

            <ImageView
                android:layout_marginTop="90dp"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                app:lottie_autoPlay="true"
                android:src="@drawable/ic_repartidor"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/et_login_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_txt"
                    android:singleLine="true"
                    android:maxLength="10"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/et_login_clave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clave_txt"
                    android:maxLength="8"
                    android:password="true"
                    android:singleLine="true"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login_ingresar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_btn"
                android:text="@string/ingresar_btn"
                />

            <TextView
                android:id="@+id/txt_login_olvido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/size_txt_login"
                android:text="@string/olvido_sec" />

            <TextView
                android:id="@+id/txt_login_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_txt_login"
                android:text="@string/registrate_sec" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>